# axum-pokemon

./: .gitignore  Cargo.toml  README.md
spring-native-image/: README.md  pom.xml
spring-native-image/src/main/java/com/example/benchmarks/jibber/: DemoApplication.java
spring-native-image/src/main/java/com/example/benchmarks/pokemon/: DemoApplication.java  PokemonApiClient.java  PokemonDTO.java
spring-native-image/src/main/java/com/example/benchmarks/pokemon/domain/: DVGenerator.java  EVGenerator.java  Pokemon.java  Stats.java
spring-native-image/src/main/java/com/example/benchmarks/pokemon/rest/: MoveDTO.java  NatureDTO.java  NaturesDTO.java  PokemonDTO.java  TypeDTO.java
spring-native-image/src/test/java/com/example/benchmarks/pokemon/domain/: PokemonTest.java
src/: main.rs  pokemon.rs  pokemon_api.rs  stats.rs
